# flappy_bird_console

./: Cargo.toml  README.md
src/: main.rs
